@@ -10,6 +10,9 @@ What's New in Python 3.3.0 Beta 1?
 Core and Builtins
 -----------------
 
+- Issue #15042: Add PyState_AddModule and PyState_RemoveModule. Add version
+  guard for Py_LIMITED_API additions. Patch by Robin Schreiber.
+
 - Issue #10053: Don't close FDs when FileIO.__init__ fails. Loosely based on
   the work by Hirokazu Yamamoto.
 
@@ -153,6 +156,9 @@ Extension Modules
 
 Documentation
 -------------
+
+- Issue #15081: Document PyState_FindModule.
+  Patch by Robin Schreiber.
 
 - Issue #14814: Added first draft of ipaddress module API reference
 
